# Homebanking

./: .gitignore  DECISIONS.md  METHODOLOGY.md  OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tasks.md
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  seed.py
app/routes/: accounts.py  transfers.py  users.py
app/schemas/: account.py  transfer.py  user.py
app/services/: geocoding.py  transfer.py
docs/: OVERVIEW.md  requirements.md  tasks.md
scripts/: mongo-init.sh  reseed.py
tests/: conftest.py  test_transfers.py  test_validation.py
