[project]
name = "homebanking"
version = "0.1.0"
description = "RESTful API for a small bank's homebanking system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "geopy>=2.4.1",
    "motor>=3.7.1",
    "pydantic-settings>=2.13.1",
    "pydantic[dotenv]>=2.12.5",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
